# AI-Mandatory-1

./: .gitignore  README.md  pyproject.toml
Mikkel/: README.md  utils.py  videogames-2.ipynb  videogames.ipynb
Timothy/: Clean_Games_Sales_Data.csv  README.md  my_research.ipynb
Tobias/: Mandatory.ipynb  Mandatory2.0.ipynb  README.md  StatisticAnalysisOfVideoGameData.ipynb  processed_video_games_data.csv  pyproject.toml
